add Humidity percentage

--- a/test05_plot.ipynb
+++ b/test05_plot.ipynb
@@ -675,7 +675,7 @@
     "plt.plot(aq_last_24_hours['Lastupdatetime'], aq_last_24_hours['Temperature'], marker='o')\n",
     "plt.title('Temperature in the Last 24 Hours')\n",
     "plt.xlabel('Time')\n",
-    "plt.ylabel('Temperature')\n",
+    "plt.ylabel('Temperature (C)')\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -702,7 +702,7 @@
     "plt.plot(aq_last_24_hours['Lastupdatetime'], aq_last_24_hours['Humidity'], marker='o')\n",
     "plt.title('Humidity in the Last 24 Hours')\n",
     "plt.xlabel('Time')\n",
-    "plt.ylabel('Humidity')\n",
+    "plt.ylabel('Humidity (%)')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
