--- a/vizhubapi_05OrganizeData.ipynb
+++ b/vizhubapi_05OrganizeData.ipynb
@@ -16,17 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: python-dotenv in c:\\programdata\\anaconda3\\lib\\site-packages (1.0.1)\n",
-      "\n",
-      "[notice] A new release of pip available: 22.1.2 -> 24.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: python-dotenv in d:\\soch1\\projects\\iot_course\\.venv\\lib\\site-packages (1.0.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.2.3; however, version 24.0 is available.\n",
+      "You should consider upgrading via the 'D:\\soch1\\Projects\\IoT_course\\.venv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
@@ -36,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +325,7 @@
        "4  1708458813173   409"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +413,7 @@
        "4 2024-02-20 19:53:33.173   409"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +501,7 @@
        "4 2024-02-20 19:53:33.173  409"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +633,7 @@
        "4  1708458813173    18"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +733,7 @@
        "4 2024-02-20 19:53:33.173          18"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +827,7 @@
        "4 2024-02-20 19:53:33.173  409          18"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +959,7 @@
        "4  2024-02-20  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,6 +971,76 @@
     "aq['Date'] = aq['DateTime'].dt.date\n",
     "\n",
     "aq.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype         \n",
+      "---  ------       --------------  -----         \n",
+      " 0   DateTime     100 non-null    datetime64[ns]\n",
+      " 1   CO2          100 non-null    object        \n",
+      " 2   Temperature  100 non-null    object        \n",
+      " 3   Weekday      100 non-null    object        \n",
+      " 4   Month        100 non-null    object        \n",
+      " 5   Hour         100 non-null    int32         \n",
+      " 6   Date         100 non-null    object        \n",
+      "dtypes: datetime64[ns](1), int32(1), object(5)\n",
+      "memory usage: 5.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "aq.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aq['CO2'] = aq['CO2'].astype(int)\n",
+    "aq['Temperature'] = aq['Temperature'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype         \n",
+      "---  ------       --------------  -----         \n",
+      " 0   DateTime     100 non-null    datetime64[ns]\n",
+      " 1   CO2          100 non-null    int32         \n",
+      " 2   Temperature  100 non-null    int32         \n",
+      " 3   Weekday      100 non-null    object        \n",
+      " 4   Month        100 non-null    object        \n",
+      " 5   Hour         100 non-null    int32         \n",
+      " 6   Date         100 non-null    object        \n",
+      "dtypes: datetime64[ns](1), int32(3), object(3)\n",
+      "memory usage: 4.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "aq.info()"
    ]
   },
   {
@@ -996,5 +1071,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
