--- a/vizhubapi_07DataAnalysis.ipynb
+++ b/vizhubapi_07DataAnalysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "4  1708458813173   409"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "4 2024-02-20 19:53:33.173   409"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "4 2024-02-20 19:53:33.173  409"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,18 +536,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 306,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1708416060000"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sensor_key = \"Temperature\"\n",
     "start_ts = convert_to_timestamp(\"2024-02-20 00:01\")\n",
-    "end_ts = convert_to_timestamp(\"2024-02-20 23:00\")"
+    "end_ts = convert_to_timestamp(\"2024-02-20 23:00\")\n",
+    "start_ts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,85 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ts</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1708458900499</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1708458878642</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1708458856767</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1708458834993</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1708458813173</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              ts value\n",
-       "0  1708458900499    18\n",
-       "1  1708458878642    18\n",
-       "2  1708458856767    18\n",
-       "3  1708458834993    18\n",
-       "4  1708458813173    18"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_temp.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +667,7 @@
        "4 2024-02-20 19:53:33.173          18"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -785,33 +719,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-02-20 19:55:00.499</td>\n",
-       "      <td>416</td>\n",
+       "      <th>95</th>\n",
+       "      <td>2024-02-20 19:19:55.702</td>\n",
+       "      <td>440</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-02-20 19:54:38.642</td>\n",
-       "      <td>408</td>\n",
+       "      <th>96</th>\n",
+       "      <td>2024-02-20 19:19:33.569</td>\n",
+       "      <td>437</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-02-20 19:54:16.767</td>\n",
-       "      <td>413</td>\n",
+       "      <th>97</th>\n",
+       "      <td>2024-02-20 19:19:11.473</td>\n",
+       "      <td>431</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-02-20 19:53:54.993</td>\n",
-       "      <td>411</td>\n",
+       "      <th>98</th>\n",
+       "      <td>2024-02-20 19:18:49.331</td>\n",
+       "      <td>437</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-02-20 19:53:33.173</td>\n",
-       "      <td>409</td>\n",
+       "      <th>99</th>\n",
+       "      <td>2024-02-20 19:18:27.161</td>\n",
+       "      <td>444</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -819,21 +753,21 @@
        "</div>"
       ],
       "text/plain": [
-       "           Lastupdatetime  CO2 Temperature\n",
-       "0 2024-02-20 19:55:00.499  416          18\n",
-       "1 2024-02-20 19:54:38.642  408          18\n",
-       "2 2024-02-20 19:54:16.767  413          18\n",
-       "3 2024-02-20 19:53:54.993  411          18\n",
-       "4 2024-02-20 19:53:33.173  409          18"
+       "            Lastupdatetime  CO2 Temperature\n",
+       "95 2024-02-20 19:19:55.702  440          18\n",
+       "96 2024-02-20 19:19:33.569  437          18\n",
+       "97 2024-02-20 19:19:11.473  431          18\n",
+       "98 2024-02-20 19:18:49.331  437          18\n",
+       "99 2024-02-20 19:18:27.161  444          18"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merged.head()"
+    "df_merged.tail()"
    ]
   },
   {
@@ -846,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +893,7 @@
        "4  2024-02-20  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1004,7 @@
        "<Figure size 1200x600 with 0 Axes>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1090,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1033,7 @@
        "Text(0, 0.5, 'CO2')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1125,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1068,7 @@
        "Text(0, 0.5, 'Temperature (°C)')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1160,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1362,7 @@
        "4  2024-02-20  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1870,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
